src/styles/sidebar/sidebar-link.css
@import "../colors.css";
@import "../spacing.css";
@import "./properties.css";

.link {
  border: var(--sidebar-item-border);
  color: var(--sidebar-item-color);
  cursor: pointer;
  font-size: var(--sidebar-item-font-size);
  list-style: none;
}

.link button {
  appearance: none;
  background: none;
  border: none;
  cursor: pointer;
  outline: none;
  text-align: left;
}

.link svg {
  margin-right: var(--sidebar-item-icon-margin-right);
}

.link div {
  outline: none;
}

.link:hover {
  background-color: var(--sidebar-item-hover-background-color);
  border-bottom-color: var(--sidebar-item-hover-border-bottom-color);
  border-top-color: var(--sidebar-item-hover-border-top-color);
  color: var(--sidebar-item-hover-color);
}

.active {
  background-color: var(--sidebar-item-selected-background-color);
  border-bottom-color: var(--sidebar-item-selected-border-bottom-color);
  border-top-color: var(--sidebar-item-selected-border-top-color);
  color: var(--sidebar-item-selected-color);
}

.active .title:only-of-type {
  color: var(--sidebar-item-selected-color);
}

.text {
  color: var(--sidebar-text-link-color);
  display: block;
  margin: var(--sidebar-text-link-margin);
  padding: var(--sidebar-text-link-padding);
  outline: none;
}

.title {
  color: var(--sidebar-title-color);
  font-size: var(--sidebar-title-font-size);
  line-height: var(--sidebar-title-line-height);
  margin: var(--sidebar-title-margin);
  padding: var(--sidebar-title-padding);
  text-transform: var(--sidebar-title-text-transform);
}

.title,
.subtitle {
  padding-left: var(--sidebar-info-toggle-padding-left);
  padding-right: var(--sidebar-info-toggle-padding-right);
}

.subtitle {
  color: var(--sidebar-toggle-color);
  font-size: var(--sidebar-toggle-font-size);
  text-transform: var(--sidebar-toggle-text-transform);
  margin-bottom: var(--sidebar-toggle-margin-bottom);
  margin-top: var(--sidebar-toggle-margin-top);
  user-select: none;
}

.subtitle svg {
  margin-left: var(--spacing-tiny);
}

.collapsed .title {
  text-align: center;
}

.collapsed .icon svg {
  margin: 0;
  width: var(--sidebar-collapsed-icon-width);
  height: var(--sidebar-collapsed-icon-height);
}

@media (--media-desk) {

  .link {
    font-size: var(--sidebar-item-font-size-desk);
  }

  .subtitle {
    font-size: var(--sidebar-toggle-font-size-desk);
  }

  .title {
    font-size: var(--sidebar-title-font-size-desk);
  }

  .text svg {
    width: var(--sidebar-text-link-icon-width-desk);
    height: var(--sidebar-text-link-icon-height-desk);
  }
}

@media (--media-tv) {

  .link {
    font-size: var(--sidebar-item-font-size-tv);
  }

  .title {
    font-size: var(--sidebar-title-font-size-tv);
  }

  .subtitle {
    font-size: var(--sidebar-toggle-font-size-tv);
  }

  .text svg {
    width: var(--sidebar-text-link-icon-width-tv);
    height: var(--sidebar-text-link-icon-height-tv);
  }

  .collapsed .icon svg {
    width: var(--sidebar-collapsed-icon-width-tv);
    height: var(--sidebar-collapsed-icon-height-tv);
  }
}

